--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -1,4 +1,4 @@
-<h1>All Users</h1>
+<div class="header">All Users</div>
 
 {{#each allUsers}}
 <a class="user-item" href="/user/{{_id}}">
@@ -9,8 +9,9 @@
     <div class="data">{{skillLevel}}</div>
 
     <div class="title">Ski or Snowboard</div>
-    <div class="data">{{skierOrSnowboarder}}</div>
+    <div class="data">{{skiOrSnowboard}}</div>
 
     {{!-- <div class="title">Ski Trips</div>
     <div class="data">{{}}</div> --}}
 </a>
+{{/each}}
