added create user form

--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -1,5 +1,12 @@
 <div class="header">All Users</div>
 
+<a href="/user/new">
+    <button>
+        Create User
+    </button>
+</a>
+
+
 {{#each allUsers}}
 <a class="user-item" href="/user/{{_id}}">
     <div class="title">Name</div>
