user can get a sinle user and delete it

--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -10,13 +10,13 @@
 {{#each allUsers}}
 <a class="user-item" href="/user/{{_id}}">
     <div class="title">Name</div>
-    <div class="data">{{name}}</div>
+    <div class="user-data">{{name}}</div>
 
     <div class="title">Skill Level</div>
-    <div class="data">{{skillLevel}}</div>
+    <div class="user-data">{{skillLevel}}</div>
 
     <div class="title">Ski or Snowboard</div>
-    <div class="data">{{skiOrSnowboard}}</div>
+    <div class="user-data">{{skiOrSnowboard}}</div>
 
     {{!-- <div class="title">Ski Trips</div>
     <div class="data">{{}}</div> --}}
