created trip controller

--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -1,4 +1,4 @@
-<div class="header">Edit Issue</div>
+<div class="header">Edit User</div>
 
 <form action="/user/{{singleUser._id}}?_method=PUT" method="POST">
 
