--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -19,5 +19,5 @@
         <option value="Snowboard">Snowboard</option>
     </select>
 
-    <input type="submit" value="Create" />
+    <input type="submit" value="Save" />
 </form>
