--- a/views/trip/editTrip.hbs
+++ b/views/trip/editTrip.hbs
@@ -1,23 +1,38 @@
-<div class="header">Edit User</div>
+<div class="header">Edit Trip</div>
 
-<form action="/user/{{singleUser._id}}?_method=PUT" method="POST">
+<form action="/trip/{{singleTrip._id}}?_method=PUT" method="POST">
+
 
     <label>Name</label>
-    <input type="text" placeholder="Enter Your Name" name="name" />
+    <input type="text" name="name" value="{{singleTrip.name}}" />
 
-    <label>Skill Level</label>
-    <select name="skillLevel">
-        <option value="Beginner">Beginner</option>
-        <option value="Intermediate">Intermediate</option>
-        <option value="Advanced">Advanced</option>
-        <option value="Expert">Expert</option>
+    <label>Country</label>
+    <select name="country" value="{{singleTrip.country}}">
+        <option value="Canada">Canada</option>
+        <option value="United States of America">United States of America</option>
     </select>
 
-    <label>Do you ski or snowboard?</label>
-    <select name="skiOrSnowboard">
-        <option value="Ski">Ski</option>
-        <option value="Snowboard">Snowboard</option>
+    <label>State</label>
+    <input type="text" name="state" value="{{singleTrip.state}}" />
+
+    <label>City</label>
+    <input type="text" name="city" value="{{singleTrip.city}}" />
+
+    <label>Airport</label>
+    <input type="text" name="airport" value="{{singleTrip.airport}}" />
+
+    <label>Days Skiing</label>
+    <input type="number" name="daysSkiing" value="{{singleTrip.daysSkiing}}" />
+
+    <label>Passport Required?</label>
+    <select name="passportRequired" value="{{singleTrip.passportRequired}}">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
     </select>
 
-    <input type="submit" value="Create" />
+
+    <label>Notes</label>
+    <input type="text" name="notes" value="{{singleTrip.notes}}">
+
+    <input type="submit" value="Save" />
 </form>
