added create resort views

--- a/views/resort/allResorts.hbs
+++ b/views/resort/allResorts.hbs
@@ -12,16 +12,16 @@
     <div class="title">Name</div>
     <div class="resort-data">{{name}}</div>
 
-    <div class="title">Average Annual Snowfall</div>
+    <div class="title">Average Annual Snowfall (in.)</div>
     <div class="resort-data">{{averageAnnualSnowfall}}</div>
 
-    <div class="title">YTD Snowfall</div>
+    <div class="title">YTD Snowfall (in.)</div>
     <div class="resort-data">{{yearToDateSnowfall}}</div>
 
-    <div class="title">Current Base</div>
+    <div class="title">Current Base (in.)</div>
     <div class="resort-data">{{currentBase}}</div>
 
-    <div class="title">Vertical Feet</div>
+    <div class="title">Vertical Feet (ft.)</div>
     <div class="resort-data">{{verticalFeet}}</div>
 
     <div class="title">Number of Trails</div>
