added single resort views

--- a/views/resort/singleResort.hbs
+++ b/views/resort/singleResort.hbs
@@ -1,38 +1,47 @@
-<div class="header">Current Trip</div>
+<div class="header">Current Resort</div>
 
-<a href="/trip/{{singleTrip._id}}/edit">
+<a href="/resort/{{singleResort._id}}/edit">
     <button>
         Edit
     </button>
 </a>
 
-<div class="trip-item">
+<div class="resort-item">
     <div class="title">Name</div>
-    <div class="trip-data">{{singleTrip.name}}</div>
+    <div class="resort-data">{{singleResort.name}}</div>
 
-    <div class="title">Country</div>
-    <div class="trip-data">{{singleTrip.country}}</div>
+    <div class="title">Average Annual Snowfall (in.)</div>
+    <div class="resort-data">{{singleResort.averageAnnualSnowfall}}</div>
 
-    <div class="title">State</div>
-    <div class="trip-data">{{singleTrip.state}}</div>
+    <div class="title">YTD Snowfall (in.)</div>
+    <div class="resort-data">{{singleResort.yearToDateSnowfall}}</div>
 
-    <div class="title">City</div>
-    <div class="trip-data">{{singleTrip.city}}</div>
+    <div class="title">Current Base (in.)</div>
+    <div class="resort-data">{{singleResort.currentBase}}</div>
 
-    <div class="title">Airport</div>
-    <div class="trip-data">{{singleTrip.airport}}</div>
+    <div class="title">Vertical Feet (ft.)</div>
+    <div class="resort-data">{{singleResort.verticalFeet}}</div>
 
-    <div class="title">Days Skiing</div>
-    <div class="trip-data">{{singleTrip.daysSkiing}}</div>
+    <div class="title">Number of Trails</div>
+    <div class="resort-data">{{singleResort.amountOfTrails}}</div>
 
-    <div class="title">Passport Required</div>
-    <div class="trip-data">{{singleTrip.passportRequired}}</div>
+    <div class="title">Number of Lifts</div>
+    <div class="resort-data">{{singleResort.amountofLifts}}</div>
+
+    <div class="title">On Mountain Lodging?</div>
+    <div class="resort-data">{{singleResort.hasOnMountainLodging}}</div>
+
+    <div class="title">Is this resort on the Ikon Pass?</div>
+    <div class="resort-data">{{singleResort.onIkonPass}}</div>
+
+    <div class="title">Is this resort on the Epic Pass?</div>
+    <div class="resort-data">{{singleResort.onEpicPass}}</div>
 
     <div class="title">Notes</div>
-    <div class="trip-data">{{singleTrip.notes}}</div>
+    <div class="resort-data">{{singleResort.notes}}</div>
 
 </div>
 
-<form action="/trip/{{singleTrip._id}}?_method=DELETE" method="POST">
+<form action="/resort/{{singleResort._id}}?_method=DELETE" method="POST">
     <button>Delete</button>
 </form>
