added edit resort views

--- a/views/resort/createResort.hbs
+++ b/views/resort/createResort.hbs
@@ -42,5 +42,8 @@
         <option value="false">No</option>
     </select>
 
+    <label>Notes</label>
+    <input type="text" name="notes" value="{{notes}}">
+
     <input type="submit" value="Create" />
 </form>
