--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -3,10 +3,10 @@
 <form action="/user/{{singleUser._id}}?_method=PUT" method="POST">
 
     <label>Name</label>
-    <input type="text" placeholder="Enter Your Name" name="name" />
+    <input type="text" name="name" value="{{singleUser.name}}" />
 
     <label>Skill Level</label>
-    <select name="skillLevel">
+    <select name="skillLevel" value="{{singleUser.skillLevel}}">
         <option value="Beginner">Beginner</option>
         <option value="Intermediate">Intermediate</option>
         <option value="Advanced">Advanced</option>
@@ -14,7 +14,7 @@
     </select>
 
     <label>Do you ski or snowboard?</label>
-    <select name="skiOrSnowboard">
+    <select name="skiOrSnowboard" value="{{singleUser.skiOrSnowboard}}">
         <option value="Ski">Ski</option>
         <option value="Snowboard">Snowboard</option>
     </select>
