linked trip to user

--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -30,5 +30,7 @@
         <option value="false">No</option>
     </select>
 
+    <input type="text" value="{{singleUser._id}}" name="userId" />
+
     <input type="submit" value="Create" />
 </form>
