added create resort to trip views

--- a/views/resort/createResort.hbs
+++ b/views/resort/createResort.hbs
@@ -45,5 +45,7 @@
     <label>Notes</label>
     <input type="text" name="notes" value="{{notes}}">
 
+    <input type="text" value="{{singleTrip._id}}" name="tripId" />
+
     <input type="submit" value="Create" />
 </form>
