--- a/views/trip/singleTrip.hbs
+++ b/views/trip/singleTrip.hbs
@@ -38,6 +38,11 @@
     </a>
     {{/each}}
 
+    <a href="/resort/newResort/trip/{{singleTrip._id}}">
+        <button>Add a Ski Resort</button>
+    </a>
+
+
 </div>
 
 <form action="/trip/{{singleTrip._id}}?_method=DELETE" method="POST">
