--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -26,7 +26,7 @@
     </a>
     {{/each}}
 
-    <a href="/trip/new/user/{{singleUser._id}}">
+    <a href="/trip/newTrip/user/{{singleUser._id}}">
         <button>Create a New Trip</button>
     </a>
 
