added link to navigate to all resorts from one trip

--- a/views/resort/allResorts.hbs
+++ b/views/resort/allResorts.hbs
@@ -1,4 +1,4 @@
-<div class="header">All Resorts</div>
+<div class="header">All Resorts from {{trip.name}}</div>
 
 <a href="/resort/new">
     <button>
