changed home page to create user page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,12 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Ski Resort Planner</title>
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 
 <body>
+    <a href="/" class="text-decoration-none">
+        <div class="menu">Home</div>
+    </a>
     <a href="/user" class="text-decoration-none">
-        <div class="home">Home</div>
+        <div class="menu">Users</div>
     </a>
     {{{body}}}
 
