--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -1,4 +1,5 @@
-<div class="header">Create User</div>
+<div class="header">Welcome to Ski Trip Planner!</div>
+<div class="sub-header">A guide to customize, share, or discover a ski trip</div>
 
 
 <form method="POST" action="/user">
@@ -20,5 +21,5 @@
         <option value="Snowboard">Snowboard</option>
     </select>
 
-    <input type="submit" value="Create" />
+    <input type="submit" value="Start Planning" />
 </form>
