added dates to trip

--- a/views/trip/allTrips.hbs
+++ b/views/trip/allTrips.hbs
@@ -24,6 +24,9 @@
     <div class="title">Airport</div>
     <div class="trip-data">{{airport}}</div>
 
+    <div class="title">Dates</div>
+    <div class="trip-data">{{startDate}} - {{endDate}}</div>
+
     <div class="title">Days Skiing</div>
     <div class="trip-data">{{daysSkiing}}</div>
 
