--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -21,6 +21,12 @@
     <label>Airport</label>
     <input type="text" name="airport" />
 
+    <label>Start Date</label>
+    <input type="date" name="startDate" />
+
+    <label>End Date</label>
+    <input type="date" name="endDate" />
+
     <label>Days Skiing</label>
     <input type="number" name="daysSkiing" />
 
