--- a/views/trip/editTrip.hbs
+++ b/views/trip/editTrip.hbs
@@ -21,6 +21,12 @@
     <label>Airport</label>
     <input type="text" name="airport" value="{{singleTrip.airport}}" />
 
+    <label>Start Date</label>
+    <input type="date" name="startDate" value="{{singleTrip.startDate}}" />
+
+    <label>End Date</label>
+    <input type="date" name="endDate" value="{{singleTrip.endDate}}" />
+
     <label>Days Skiing</label>
     <input type="number" name="daysSkiing" value="{{singleTrip.daysSkiing}}" />
 
