--- a/views/trip/singleTrip.hbs
+++ b/views/trip/singleTrip.hbs
@@ -22,6 +22,9 @@
     <div class="title">Airport</div>
     <div class="trip-data">{{singleTrip.airport}}</div>
 
+    <div class="title">Dates</div>
+    <div class="trip-data">{{singleTrip.startDate}} - {{singleTrip.endDate}}</div>
+
     <div class="title">Days Skiing</div>
     <div class="trip-data">{{singleTrip.daysSkiing}}</div>
 
