--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,15 +5,35 @@
     <meta charset="utf-8">
     <title>Ski Resort Planner</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-    <a href="/" class="text-decoration-none">
-        <div class="menu">Home</div>
-    </a>
-    <a href="/user" class="text-decoration-none">
-        <div class="menu">Users</div>
-    </a>
+    <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;">
+        <a class="navbar-brand" href="/">Ski Trip Planner</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="/">Home</a>
+                <a class="nav-item nav-link" href="/user">Users</a>
+            </div>
+        </div>
+    </nav>
+    {{!-- <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Ski Trip Planner</a>
+        <div class="menu">
+            <a href="/" class="text-decoration-none">
+                <div class="nav-item nav-link active">Home <span class="sr-only">(current)</span></div>
+            </a>
+            <a href="/user" class="text-decoration-none">
+                <div class="nav-item nav-link">Users</div>
+            </a>
+        </div>
+    </nav> --}}
     {{{body}}}
 
 </body>
