--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -1,25 +1,19 @@
-<div class="header">Welcome to Ski Trip Planner!</div>
-<div class="sub-header">A guide to customize, share, or discover a ski trip</div>
+<div class="welcome">Welcome to Ski Trip Planner!</div>
+<div class="description">A guide to customize, share, or discover a ski trip</div>
 
-
-<form method="POST" action="/user">
-
-    <label>Name</label>
-    <input type="text" placeholder="Enter Your Name" name="name" />
-
-    <label>Skill Level</label>
-    <select name="skillLevel">
-        <option value="Beginner">Beginner</option>
-        <option value="Intermediate">Intermediate</option>
-        <option value="Advanced">Advanced</option>
-        <option value="Expert">Expert</option>
-    </select>
-
-    <label>Do you ski or snowboard?</label>
-    <select name="skiOrSnowboard">
-        <option value="Ski">Ski</option>
-        <option value="Snowboard">Snowboard</option>
-    </select>
-
-    <input type="submit" value="Start Planning" />
-</form>
+<div class="create-user">
+    <form method="POST" action="/user">
+        <input class="form-control" type="text" placeholder="Enter Your Name" name="name" />
+        <select class="form-control" name="skillLevel">
+            <option value="Beginner">Beginner</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Advanced">Advanced</option>
+            <option value="Expert">Expert</option>
+        </select>
+        <select class="form-control" name="skiOrSnowboard">
+            <option value="Ski">Ski</option>
+            <option value="Snowboard">Snowboard</option>
+        </select>
+        <input type="submit" value="Start Planning" class="btn btn-primary form-control" />
+    </form>
+</div>
