styled all users page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'SF Pro Text', sans-serif;
+}
+
 .title {
     font-size: 24px;
     color: black;
@@ -34,3 +38,26 @@ a {
 .form-control {
     margin: 0 0 20px 0;
 }
+
+.card {
+    margin: auto;
+}
+
+.user-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px;
+    padding: 20px;
+}
+
+.header {
+    font-size: 32px;
+    letter-spacing: 1px;
+    font-weight: 300;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
