--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,24 +16,13 @@
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/user">Users</a>
             </div>
         </div>
     </nav>
-    {{!-- <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Ski Trip Planner</a>
-        <div class="menu">
-            <a href="/" class="text-decoration-none">
-                <div class="nav-item nav-link active">Home <span class="sr-only">(current)</span></div>
-            </a>
-            <a href="/user" class="text-decoration-none">
-                <div class="nav-item nav-link">Users</div>
-            </a>
-        </div>
-    </nav> --}}
     {{{body}}}
 
 </body>
