--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -1,22 +1,21 @@
 <div class="header">All Users</div>
+<div class="text-center">
+    <a href="/user/new">
+        <button class="btn btn-primary">
+            Create User
+        </button>
+    </a>
+</div>
 
-<a href="/user/new">
-    <button>
-        Create User
-    </button>
-</a>
-
-
-{{#each allUsers}}
-<a class="user-item" href="/user/{{_id}}">
-    <div class="title">Name</div>
-    <div class="user-data">{{name}}</div>
-
-    <div class="title">Skill Level</div>
-    <div class="user-data">{{skillLevel}}</div>
-
-    <div class="title">Ski or Snowboard</div>
-    <div class="user-data">{{skiOrSnowboard}}</div>
-</a>
-<hr>
-{{/each}}
+<div class="user-cards">
+    {{#each allUsers}}
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">{{name}}</h5>
+            <p class="card-text">Experience: {{skillLevel}}</p>
+            <p class="card-text">Activity: {{skiOrSnowboard}}</p>
+            <a href="/user/{{_id}}" class="card-link">Trips created by this user</a>
+        </div>
+    </div>
+    {{/each}}
+</div>
