--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -1,6 +1,6 @@
 <div class="header">All Users</div>
 <div class="text-center">
-    <a href="/user/new">
+    <a href="/">
         <button class="btn btn-primary">
             Create User
         </button>
