--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,15 @@ a {
     text-decoration: none;
 }
 
+
+
 .welcome {
     text-align: center;
     font-size: 45px;
     font-weight: 400;
     letter-spacing: 0.5px;
+    padding: 20px 20px 0 20px;
+    margin: 10px 10px 0 10px;
 }
 
 .description{
@@ -23,16 +27,14 @@ a {
     font-size: 20px;
     font-weight: 300;
     letter-spacing: 0.5px;
+    padding: 0 20px 20px 20px;
+    margin: 0 10px 10px 10px;
 }
 
-.create-user{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.create-user-form{
     margin: auto;
-    width: 30%;
-    padding: 10px;
+    width: 300px;
+    padding: 40px 20px 20px 20px;
 }
 
 .form-control {
