--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -1,7 +1,7 @@
 <div class="create-user-page">
     <div>
         <div class="welcome">Welcome to Ski Trip Planner!</div>
-        <div class="description">A guide to customize, share, or discover a ski trip</div>
+        <div class="description">A guide to customize, share, or discover the perfect ski trip</div>
     </div>
 
     <div class="create-user-form">
