--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -1,42 +1,128 @@
 <div class="header">Create Trip</div>
 
+<form class="needs-validation" novalidate method="POST" action="/trip">
+    <div class="form-row">
+        <div class="col-md-3 mb-3">
+            <label for="validationCustom01">Trip Name</label>
+            <input type="text" class="form-control" id="validationCustom01" placeholder="Trip Name" name="name"
+                required>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <div class="invalid-feedback">
+                Please name your trip.
+            </div>
+        </div>
+        <div class="col-md-3 mb-3">
+            <label for="validationCustom02">Country</label>
+            <select class="form-control" id="validationCustom02" name="country" required>
+                <option value="Canada">Canada</option>
+                <option value="United States of America">United States of America</option>
+            </select>
+        </div>
+        <div class="col-md-3 mb-3">
+            <label for="validationCustomUsername">State</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="validationCustomUsername" name="state" required>
+                <div class="invalid-feedback">
+                    Please provide a valid State.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 mb-3">
+            <label for="validationCustom03">City</label>
+            <input type="text" class="form-control" id="validationCustom03" name="city" required>
+            <div class="invalid-feedback">
+                Please provide a valid city.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="col-md-2 mb-3">
+            <label for="validationCustom03">Airpot</label>
+            <input type="text" class="form-control" id="validationCustom03" name="airport" required>
+            <div class="invalid-feedback">
+                Please provide a valid airport.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <label for="validationCustom03">Start Date</label>
+            <input type="date" class="form-control" id="validationCustom03" name="startDate" required>
+            <div class="invalid-feedback">
+                Please select a start date.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <label for="validationCustom03">End Date</label>
+            <input type="date" class="form-control" id="validationCustom03" name="endDate" required>
+            <div class="invalid-feedback">
+                Please select an end date.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <label for="validationCustom03">Days on the Slopes</label>
+            <input type="number" class="form-control" id="validationCustom03" name="daysSkiing" required>
+            <div class="invalid-feedback">
+                Please provide how many days you are planning on skiing.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+        <div class="col-md-2 mb-3">
+            <label for="validationCustom03">Passport Required?</label>
+            <select class="form-control" id="validationCustom02" name="passportRequired" required>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select>
+            <div class="invalid-feedback">
+                Please select an option.
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+        </div>
+    </div>
 
-<form method="POST" action="/trip">
+    </div>
 
-    <label>Name</label>
-    <input type="text" placeholder="Trip Name" name="name" />
+    <input type="hidden" value="{{singleUser._id}}" name="userId" />
 
-    <label>Country</label>
-    <select name="country">
-        <option value="Canada">Canada</option>
-        <option value="United States of America">United States of America</option>
-    </select>
-
-    <label>State</label>
-    <input type="text" name="state" />
-
-    <label>City</label>
-    <input type="text" name="city" />
-
-    <label>Airport</label>
-    <input type="text" name="airport" />
-
-    <label>Start Date</label>
-    <input type="date" name="startDate" />
-
-    <label>End Date</label>
-    <input type="date" name="endDate" />
-
-    <label>Days Skiing</label>
-    <input type="number" name="daysSkiing" />
-
-    <label>Passport Required?</label>
-    <select name="passportRequired">
-        <option value="true">Yes</option>
-        <option value="false">No</option>
-    </select>
-
-    <input type="text" value="{{singleUser._id}}" name="userId" />
-
-    <input type="submit" value="Create" />
+    <input type="submit" value="Create" class="btn btn-primary" />
 </form>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
