--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -17,7 +17,7 @@
                 <option value="Ski">Ski</option>
                 <option value="Snowboard">Snowboard</option>
             </select>
-            <input type="submit" value="Start Planning" class="btn btn-primary form-control" />
+            <input type="submit" value="Start Planning" class="btn btn-info form-control" />
         </form>
     </div>
 </div>
