--- a/views/user/allUsers.hbs
+++ b/views/user/allUsers.hbs
@@ -15,7 +15,7 @@
             {{!-- <h4 class="card-title">{{name}}</h4> --}}
             <p class="card-text">Experience: {{skillLevel}}</p>
             <p class="card-text">Activity: {{skiOrSnowboard}}</p>
-            <a href="/user/{{_id}}" class="btn btn-outline-info">Trips created by this user</a>
+            <a href="/user/{{_id}}" class="btn btn-outline-info">View this user</a>
         </div>
     </div>
     {{/each}}
