--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -1,19 +1,22 @@
 <div class="create-user-page">
     <div>
         <div class="welcome">Welcome to Ski Trip Planner!</div>
-        <div class="description">A guide to customize, share, or discover the perfect ski trip</div>
+        <div class="description">A platform for skiers and snowboarders to customize, share, or discover the perfect ski
+            trip</div>
     </div>
 
     <div class="create-user-form">
         <form method="POST" action="/user">
             <input class="form-control" type="text" placeholder="Enter Your Name" name="name" />
             <select class="form-control" name="skillLevel">
+                <option value="" disabled selected hidden>Select an option</option>
                 <option value="Beginner">Beginner</option>
                 <option value="Intermediate">Intermediate</option>
                 <option value="Advanced">Advanced</option>
                 <option value="Expert">Expert</option>
             </select>
             <select class="form-control" name="skiOrSnowboard">
+                <option value="" disabled selected hidden>Select an option</option>
                 <option value="Ski">Ski</option>
                 <option value="Snowboard">Snowboard</option>
             </select>
