added text area for notes

--- a/views/resort/editResort.hbs
+++ b/views/resort/editResort.hbs
@@ -44,7 +44,7 @@
 
 
     <label>Notes</label>
-    <input type="text" name="notes" value="{{singleResort.notes}}">
+    <input type="textarea" name="notes" value="{{singleResort.notes}}">
 
     <input type="submit" value="Save" />
 </form>
