--- a/views/trip/editTrip.hbs
+++ b/views/trip/editTrip.hbs
@@ -38,7 +38,7 @@
 
 
     <label>Notes</label>
-    <input type="text" name="notes" value="{{singleTrip.notes}}">
+    <input type="textarea" name="notes" value="{{singleTrip.notes}}">
 
     <input type="submit" value="Save" />
 </form>
