--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,10 +77,7 @@ a {
     width: 50%;
 }
 
-/* .trip-link {
-    color: #17a2b8 ;
-} */
-/* 
-.add-trip-button {
-    border: solid #17a2b8 1px;
-} */
+.trip-link{
+    margin: 20px 20px 5px 0;
+}
+
