--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -1,23 +1,21 @@
 <div class="header">Edit User</div>
 
-<form action="/user/{{singleUser._id}}?_method=PUT" method="POST">
 
-    <label>Name</label>
-    <input type="text" name="name" value="{{singleUser.name}}" />
-
-    <label>Skill Level</label>
-    <select name="skillLevel" value="{{singleUser.skillLevel}}">
-        <option value="Beginner">Beginner</option>
-        <option value="Intermediate">Intermediate</option>
-        <option value="Advanced">Advanced</option>
-        <option value="Expert">Expert</option>
-    </select>
-
-    <label>Do you ski or snowboard?</label>
-    <select name="skiOrSnowboard" value="{{singleUser.skiOrSnowboard}}">
-        <option value="Ski">Ski</option>
-        <option value="Snowboard">Snowboard</option>
-    </select>
-
-    <input type="submit" value="Save" />
-</form>
+<div class="create-user-form">
+    <form action="/user/{{singleUser._id}}?_method=PUT" method="POST">
+        <input class="form-control" type="text" value="{{singleUser.name}}" name="name" />
+        <select class="form-control" name="skillLevel">
+            <option value="" disabled selected hidden>Select an option</option>
+            <option value="Beginner">Beginner</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Advanced">Advanced</option>
+            <option value="Expert">Expert</option>
+        </select>
+        <select class="form-control" name="skiOrSnowboard">
+            <option value="" disabled selected hidden>Select an option</option>
+            <option value="Ski">Ski</option>
+            <option value="Snowboard">Snowboard</option>
+        </select>
+        <input type="submit" value="Save" class="btn btn-info form-control" />
+    </form>
+</div>
